# RL-GodField

./: attackCard.py  card.py  cards.py  defenceCard.py  field.py  game.py  main.py  player.py  pyproject.toml  q_learning_nn.py  qnet.py
util/: remove_one_from_redundant_list.py
