[tool.poetry]
name = "godfield"
version = "0.1.0"
description = ""
authors = ["Jinyamyzk <63580543+Jinyamyzk@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dezero = "^0.0.13"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
